# SageTutorial

./: 404.html  README.en.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy.yaml  preview.yaml
capability-report/: index.html
docs/: capability-report.md  getting-started.md  hitk-environment.md  index.md  lie-theory-map.md  quantum-groups.md  reference.md
docs/examples/: a2-root-weyl.md  b-type-root-weight-lattice.md  lie-crystal.md  q-numbers.md
en/: index.html
en/capability-report/: index.html
en/examples/a2-root-weyl/: index.html
en/examples/b-type-root-weight-lattice/: index.html
en/examples/lie-crystal/: index.html
en/examples/q-numbers/: index.html
en/getting-started/: index.html
en/lie-theory-map/: index.html
en/quantum-groups/: index.html
en/reference/: index.html
examples/: b_type_root_weight_lattice.py  lie_quantum_smoke.py  module_scan.py
examples/a2-root-weyl/: index.html
examples/b-type-root-weight-lattice/: index.html
examples/lie-crystal/: index.html
examples/outputs/: api-introspection.txt  b-type-root-weight-lattice.txt  lie-quantum-smoke-final.txt  module-scan.txt  quantum-group-introspection.txt
examples/q-numbers/: index.html
getting-started/: index.html
lie-theory-map/: index.html
quantum-groups/: index.html
reference/: index.html
search/: search_index.json
